--- a/src/view/Water.form
+++ b/src/view/Water.form
@@ -2,6 +2,9 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="5a" green="32" red="23" type="rgb"/>
+    </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[700, 410]"/>
     </Property>
@@ -673,7 +676,7 @@
     <Component class="javax.swing.JLabel" name="Background">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/assets/image/background2.png"/>
+          <Image iconType="3" name="/assets/image/background(700x410).png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel22"/>
       </Properties>
